[package]
name = "rusty-common"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.8.0"
log = { version = "0.4.21", features = ["serde", "std"] }
pretty_env_logger = "0.5.0"
rust-s3 = "0.34.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.61"
image = "0.25.1"
fast_image_resize = { version = "4.0.0", features = ["image"] }
argon2 = "0.5.3"
